MAE-511: Fix the alignment on new mailing page

--- a/scss/civicrm/contact/pages/_email-builder.scss
+++ b/scss/civicrm/contact/pages/_email-builder.scss
@@ -29,6 +29,13 @@
     }
   }
 
+  .crmMailing-preview {
+    .crm-button {
+      display: inline-block;
+      float: none;
+    }
+  }
+
   .label {
     text-align: left;
 
